Add Radial Gradient

--- a/ColourGlide.html
+++ b/ColourGlide.html
@@ -15,7 +15,7 @@
     <title>ColourGlide</title>
   </head>
   
-  <body onload="colourCan()">
+  <body onload="colourCanR()">
 
   <canvas id="colourCanvas"></canvas>
     
