Radial Gradient moved with mouse

--- a/ColourGlide.html
+++ b/ColourGlide.html
@@ -17,7 +17,7 @@
   
   <body onload="colourCanR()">
 
-  <canvas id="colourCanvas"></canvas>
+  <canvas id="colourCanvas" onmousemove="showCoords(event)"></canvas>
     
   </body>
 </html>
